# advent_of_code

./: Cargo.toml  README.md  go.work
2022/: README.md
2022/day01/: main.go
2022/day02/: main.go
2022/day04/: go.mod
2022/day08/: main.go
2022/day09/: go.mod  main.go
2022/day10/: go.mod
2022/day12/: go.mod  main.go
2022/day13/: main.go
2023/: README.md
2023/day1/: Cargo.toml
2023/day1/src/: main.rs
2023/day3/: Cargo.toml
2023/day4/: Cargo.toml
2023/day5/: Cargo.toml
2023/day6/: Cargo.toml
2023/day9/: Cargo.toml
2023/util/: Cargo.toml
2024/: .gitignore  CMakeLists.txt  README.md
2024/day01/: main.cpp
2024/day02/: main.cpp
2024/day03/: main.cpp
2024/day04/: main.cpp
2024/day05/: main.cpp
2024/day06/: main.cpp
2024/day07/: main.cpp
2024/day08/: main.cpp
2024/day09/: main.cpp
2024/util/: CMakeLists.txt  util.cpp  util.hpp
day01/: go.mod
day02/: go.mod  main.go
day03/: go.mod  main.go
day04/: go.mod  main.go
day05/: go.mod  main.go
day06/: go.mod  main.go
day07/: go.mod  main.go
day08/: go.mod
day09/: main.go
day1/: go.mod  main.go
day1/src/: main.rs
day10/: main.go
day10/src/: main.rs
day11/: go.mod  main.go
day11/src/: main.rs
day12/: main.go
day12/src/: main.rs
day13/: go.mod
day14/: go.mod  main.go
day2/: Cargo.toml
day2/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/src/: main.rs
src/: day1.rs  day2.rs  day3.rs  util.rs
(+8 files in other folders)
